# capnp-generic-test

./: Cargo.toml  build.rs  generic_client.capnp
src/: client.rs  main.rs  server.rs
